@@ -3,8 +3,9 @@ gcl (2.6.1-19) unstable; urgency=low
   * Fix bug in compiler::c2labels in which *ccb-vs* was missing a ocal
     rebind
   * Remove duplicate tags from compiled C switch statements
+  * Minor merges for DARWIN support
 
- -- Camm Maguire <camm@enhanced.com>  Wed, 12 Nov 2003 15:22:49 +0000
+ -- Camm Maguire <camm@enhanced.com>  Wed, 12 Nov 2003 15:42:28 +0000
 
 gcl (2.6.1-18) unstable; urgency=low
 
